--- a/app/src/main/res/layout/layout/activity_main.xml
+++ b/app/src/main/res/layout/layout/activity_main.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    >
+    tools:context="net.simplifiedcoding.retrofitexample.activities.MainActivity">
 
 
     <ImageView
@@ -45,7 +45,7 @@
         android:layout_height="wrap_content"
         android:layout_above="@+id/imageView"
         android:layout_alignParentStart="true"
-        android:text="testMessage"
+        android:text="Simplified Coding"
         android:textAlignment="center"
         android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />
 </RelativeLayout>
