--- a/app/src/main/res/layout/layout/app_bar_home.xml
+++ b/app/src/main/res/layout/layout/app_bar_home.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true">
-
+    android:fitsSystemWindows="true"
+    tools:context="net.simplifiedcoding.retrofitexample.activities.HomeActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -21,7 +21,7 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_header_home" />
+    <include layout="@layout/content_home" />
 
 
 
