--- a/app/src/main/res/layout/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/layout/fragment_profile.xml
@@ -1,14 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_sign_up"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    >
+    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -39,7 +32,6 @@
 
         <RadioGroup
             android:id="@+id/radioGender"
-            android:checkedButton="@+id/radioMale"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
@@ -59,10 +51,11 @@
         </RadioGroup>
 
         <Button
-            android:id="@+id/buttonSignUp"
+            android:id="@+id/buttonUpdate"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Sign Up" />
+            android:text="Update" />
 
     </LinearLayout>
+
 </RelativeLayout>
